--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive  # Required if using themes as submodules
+          fetch-depth: 0
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
@@ -23,7 +24,7 @@ jobs:
           extended: true
 
       - name: Build Hugo site
-        run: hugo --minify --destination public
+        run: hugo --minify --ignoreCache --buildDrafts --buildFuture
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
