--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,6 +2,11 @@ baseURL: https://harshrai654.github.io/blogs
 languageCode: en-us
 title: Learning Loop
 theme: PaperMod
+markup:
+  highlight:
+    noClasses: false
+    style: dracula  
+    lineNos: true  
 params:
   ShowReadingTime: true
   ShowShareButtons: true
